# ouilookup

./: .flake8  .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  readme.md  setup.py
.github/workflows/: build-tests.yml
OuiLookup/: __init__.py  __name__.py  __version__.py  logger.py  main.py  utils.py
OuiLookup/data/: oui.json
data/: oui.json  oui.txt
ouilookup/: LoggerManager.py  OuiLookup.py  __init__.py
ouilookup/data/: oui.json  oui.txt
src/ouilookup/: __init__.py  exceptions.py  main.py
src/ouilookup/cli/: __init__.py
src/ouilookup/data/: ouilookup.json
src/ouilookup/models/: __init__.py  ouidata.py
src/ouilookup/utils/: __init__.py  logger.py  output.py  temppath.py
tests/: __init__.py  test_functions.py  test_import.py  test_trivial.py
